- Added support for enum keyword
- Added command-line parameter to specify preprocessor recursion max depth (default is 10)
- Fixed defect 2908377.
  http://sourceforge.net/tracker/?func=detail&aid=2908377&group_id=68600&atid=521776
- Added support for struct member declaration using comma-separated variable names.

Version 1.0.1.b35
-----------------
- Exposed the bcd2dec API function in NXC.
- Fixed a bug when whitespace separates open parenthesis and function name
  e.g., y = mal2 (7);
- Added support for bitwise negation (complement) in NXC using the ~ operator.
  This requires the enhanced NBC/NXC firmware.
- Added support for local array initialization in NXC.  Only single dimension 
  arrays of non-aggregate types are supported.
- Fixed a bug in the symbol table output where preprocessor declarations were
  being erroneously stripped.
- Fixed a line number reporting problem in NXC when using #include for non-system
  header files.
- Added .ric file decompilation to the NBC compiler.
- Added support for new opcodes and system calls in the latest enhanced NBC/NXC
  firmware.  The new system calls are FileFindFirst, FileFindNext, 
  FileOpenWriteLinear, FileOpenWriteNonLinear, FileOpenReadLinear, 
  CommHSControl, CommHSCheckStatus, CommHSWrite, and CommHSRead.  The new
  opcodes are arrop, acos, asin, atan, ceil, exp, fabs, floor, sqrt, tan, 
  tanh, cos, cosh, log, log10, sin, sinh, atan2, fmod, and pow.
- Added support for all the Power Function modes via the HiTechnic iRLink I2C
  device.  See the new HTPFComboDirect, HTPFSinglePin, HTPFSingleOutputCST, 
  HTPFSingleOutputPWM, HTPFComboPWM, HTPFTrain, HTPFRawOutput, and HTPFRepeat 
  NBC and NXC API functions.
- Added support for the IR Train receiver via the HiTechnic iRLink I2C device.
  See the new HTPFIRTrain NBC and NXC API functions.
- Fixed bugs in unused variable removal and mutex removal.
- Changed compiler to use -Z1 optimization as the default optimization level.