@@ -44,9 +44,6 @@ file extension.
 .B \-S=<portname>
 specify port name (COMn or usb), resource name, or alias
 .TP
-.B \-BT
-use bluetooth
-.TP
 .B \-d
 download program
 .TP
